--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <!--
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
@@ -22,34 +22,38 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Pharmacy Mangement</title>
-  <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon" />
-  <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon" />
-  <!--Google font-->
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
+    <title>Pharmacy Mangement</title>
+    <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon" />
+    <!--Google font-->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/fontawesome.css">
-  
-  <!-- Themify icon -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/themify.css">
+    <!-- Font Awesome -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/fontawesome.css">
 
-  <!-- Bootstrap css -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
+    <!-- Themify icon -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/themify.css">
 
-  <!-- App css -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <!-- Bootstrap css -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap.css">
 
-  <!-- Responsive css -->
-  <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
+    <!-- App css -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
 
+    <!-- Responsive css -->
+    <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
+    <link rel="stylesheet" type="text/css" href="/css/pace.css">
+    <script src="/js/pace.js"></script>
+    <script>
+        Pace.start();
+    </script>
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-  <!--
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+    <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
