pharmacy inventory, customer order

--- a/public/index.html
+++ b/public/index.html
@@ -57,6 +57,7 @@
                 }, time);
             }
         })
+        window.format_number = (number) => new Intl.NumberFormat().format(number);
     </script>
 </head>
 
