customer end order and appoinment

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,7 @@
 
     <!-- App css -->
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/custom.css">
 
     <!-- Responsive css -->
     <link rel="stylesheet" type="text/css" href="/assets/css/responsive.css">
