--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Pharmacy Mangement</title>
-    <link rel="icon" href="/assets/images/favicon.png" type="image/x-icon" />
-    <link rel="shortcut icon" href="/assets/images/favicon.png" type="image/x-icon" />
+    <title>Good Green</title>
+    <link rel="icon" href="/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="/favicon.png" type="image/x-icon" />
     <!--Google font-->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,800" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,500,600,700" rel="stylesheet">
